# cosmic

./: Readme.md  pyproject.toml
cosmic/: __init__.py  cosmic.py
cosmic/estimators/: knife.py  knife_estimator.py
examples/: Basic example.ipynb
summarization_evaluation/: Comprehensive.ipynb  Cross MI evaluation.ipynb  Evaluate MI vs Tasks Perfs.ipynb  Multilingual.ipynb  Seahorsedataset.ipynb
