[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmic"
version = "1.0.0"
authors = [
]
description = ""
readme = "Readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
